--- a/MIAP/Presentation.html
+++ b/MIAP/Presentation.html
@@ -24,7 +24,7 @@
 
         <section>
         <div class="float-up text-center">
-            <h1>Présentation</h1>
+            <h1>Présentation du projet</h1>
             <p>Nous nous sommes réunis autour d'un projet commun qui
                 est de faciliter nos vies de gourmets. En manque de
                 découverte culinaire durant ces temps de confinement,
