cc c moi peppa pig

--- a/MIAP/Presentation.html
+++ b/MIAP/Presentation.html
@@ -23,8 +23,8 @@
  
 
         <section>
-        <div class="float-up text-center">
-            <h1>Présentation du projet</h1>
+        <div class="ball text-center" id="ball" name="ball">
+            <h1>Présentation</h1>
             <p>Nous nous sommes réunis autour d'un projet commun qui
                 est de faciliter nos vies de gourmets. En manque de
                 découverte culinaire durant ces temps de confinement,
@@ -45,37 +45,21 @@
                 interagir par le biais de notre intérêt commun pour la
                 découverte culinaire.</p>
         </div>
-        <div class="float-up">  
+        <div class="ball" id="ball" name="ball">  
             <h1>Publicité</h1>
             <img id="myLogo" class="img-fluid" src="image/aVenir.png" alt="logo" style="width:300px;"></div>
-        <div class="float-up">
+        <div class="ball" id="ball">
             <h1>Vidéo Explicative</h1>
             <img class="img-fluid" src="image/aVenir.png" alt="logo" style="width:300px;">
         </div>
-        <div class="float-up">
+        <div class="ball" id="ball">
             <h1>Témoignages Utilisateurs</h1>
             <img class="img-fluid" src="image/aVenir.png" alt="logo" style="width:300px;">
         </div>
-        <div class="float-up"></div>
-        <div class="float-up"></div>
-        <div class="float-up"></div>
-        <div class="float-up"></div>
-        <div class="float-up"></div>
-        <div class="float-up"></div> 
-        <div class="float-up"></div>
-        <div class="float-up"></div>
-        <div class="float-up"></div>
-        <div class="float-up"></div>
-        <div class="float-up"></div>
-        <div class="float-up"></div>
-        <div class="float-up"></div>
-        <div class="float-up"></div>
-        <div class="float-up"></div>
-        <div class="float-up"></div>
-        <div class="float-up"></div>
-        <div class="float-up"></div>
-        <div class="float-up"></div>
-        <div class="float-up"></div>
+        <h1>Simple onload animation</h1>
+        <div class="ball" id="ball">
+            Loaded
+        </div>
     </section>
     </body>
 </html>
