Navbar + Questions fréquentes

--- a/MIAP/Page Aide.html
+++ b/MIAP/Page Aide.html
@@ -35,9 +35,9 @@
                         <li><a class="navlink" href="#">Nous contacter</a></li>
                     </ul>
 
-                    <ul class="nav navbar-nav navbar-right">
+                    <ul class="nav navbar-nav">
                         <!-- <li><a href="#"><span class="glyphicon glyphicon-user"></span></a></li>   A mettre lorsque la personne sera connectée -->
-                         <li><a class="navlink" href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-log-in"></span> Inscription / Connexion <span class="caret"></span></a>
+                         <li><a class="navlink" href="#" data-toggle="dropdown"><span class="glyphicon glyphicon-log-in"></span> Inscription / Connexion <span class="caret"></span></a>
                              <ul class="dropdown-menu">
                                  <li><a href="#">S'inscrire</a></li>
                                  <li><a href="#">Se connecter</a></li>
@@ -49,6 +49,74 @@
          </div>
      </div>
  </div>
+
+
+<div class="container">
+    <!-- une ligne -->
+    <div class="row">
+            <h1>Questions fréquentes</h1>
+    </div>
+    <div class="row">
+        <p>Votre compte</p>
+    </div>
+    <div>
+        <a href="#CollapseCompte" data-toggle="collapse" aria-expanded="false" aria-controls="CollapseCompte">Pourquoi devez vous avoir un compte ?</a>
+        <section id="CollapseCompte" class="collapse">
+            <div class="colCompte">Créer un compte vous permettra d'avoir accès à toutes nos fonctionnalités. Etant
+                un réseau social, un compte vous permet de sécuriser vos informations afin de pouvoir partager vos idées
+                avec amis ou plus !
+            </div>
+        </section>
+    </div>
+    <div>
+        <a href="#CollapseCreer" data-toggle="collapse" aria-expanded="false" aria-controls="CollapseCreer">Comment se créer un compte ?</a>
+        <section id="CollapseCreer" class="collapse">
+            <div class="colCompte">
+                <p>La création d'un compte est très simple. Cliquez sur le bouton en haut à droite et sélectionner
+                    le bouton "S'inscrire" <br> Vous pouvez liez votre compte aavec votre adresse email.</p>
+                <p>
+                    COMMENT FAIRE ? <br>
+                    1.Entrez votre adresse email, votre nom, votre prénom et créer un mot de passe. <br>Vous ne pouvez utilisez 2 fois la même adresse
+                    email. Vérifiez bien votre adresse email avant de valider ! <br>
+                    2.Appuyez sur le bouton "Créer mon compte" <br>
+                    3.Réjouissez-vous, vous faites désormais du miappies world !!
+                </p>
+            </div>
+        </section>
+    </div>
+    <div>
+        <a href="#Collapsedeco" data-toggle="collapse" aria-expanded="false" aria-controls="Collapsedeco">Comment se déconnecter de son compte?</a>
+        <section id="Collapsedeco" class="collapse">
+            <div class="colCompte">
+                <p>Vous voulez vous déconnecter de votre compte ? Rien de plus simple !</p>
+                <p>
+                    1.Ouvrez la barre de navigation <br>
+                    2.Cliquez sur le bouton "déconnexion" <br>
+                    3.Je vous avais bien dit que c'était facile voyons!!
+                </p>
+            </div>
+        </section>
+    </div>
+    <div>
+        <a href="#Collapsesup" data-toggle="collapse" aria-expanded="false" aria-controls="Collapsesup">Comment supprimer son compte ?</a>
+        <section id="Collapsesup" class="collapse">
+            <div class="colCompte">
+                <p>Oh malheur, tristesse...un soldat à terrreeeee! <br>Trèves de plaisanteries, comment supprimer son compte ?</p>
+                <p>
+                    1.Ouvrez la barre de navigation <br>
+                    2.Cliquez sur le bouton "Mon profil" <br>
+                    3.Ouvrer les pamramètres de comptes <br>
+                    4.Cliquez sur le bouton "Supprimer mon compte"<br>
+                    Votre compte sera supprimé sous 30 jours (On est triste mais bon...)
+                </p>
+            </div>
+        </section>
+    </div>
+
+
+</div>
+
+
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
  </body>
