--- a/MIAP/Page Aide.html
+++ b/MIAP/Page Aide.html
@@ -35,7 +35,7 @@
                         <li><a class="navlink" href="#">Nous contacter</a></li>
                     </ul>
 
-                    <ul class="nav navbar-nav">
+                    <ul class="nav navbar-nav navbar-right">
                         <!-- <li><a href="#"><span class="glyphicon glyphicon-user"></span></a></li>   A mettre lorsque la personne sera connectée -->
                          <li><a class="navlink" href="#" data-toggle="dropdown"><span class="glyphicon glyphicon-log-in"></span> Inscription / Connexion <span class="caret"></span></a>
                              <ul class="dropdown-menu">
@@ -51,7 +51,7 @@
  </div>
 
 
-<div class="container">
+<div class="container questions">
     <!-- une ligne -->
     <div class="row">
             <h1>Questions fréquentes</h1>
@@ -112,12 +112,62 @@
             </div>
         </section>
     </div>
-
-
 </div>
-
+<div class="container contact-form">
+    <div class="contact-image">
+        <img src="https://image.ibb.co/kUagtU/rocket_contact.png" alt="rocket_contact"/>
+    </div>
+    <form method="post">
+        <h3> Assistance <br> Vous voulez nous contacter ?</h3>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <input type="text" name="txtName" class="form-control" placeholder="Votre nom *" value="" />
+                </div>
+                <div class="form-group">
+                    <input type="text" name="txtEmail" class="form-control" placeholder="Votre email *" value="" />
+                </div>
+                <div class="form-group">
+                    <input type="text" name="txtPhone" class="form-control" placeholder="Votre téléphone *" value="" />
+                </div>
+                <div class="form-group">
+                    <input type="submit" name="btnSubmit" class="btnContact" value="Envoyer" />
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <textarea name="txtMsg" class="form-control" placeholder="Your Message *" style="width: 100%; height: 150px;"></textarea>
+                </div>
+            </div>
+        </div>
+    </form>
+</div>
+<div class="container contact-form">
+    <div class="contact-image">
+        <img src="https://image.ibb.co/kUagtU/rocket_contact.png" alt="rocket_contact"/>
+    </div>
+    <form method="post">
+        <h3> Boite à idées  <br><br> Une idée, une suggestion ? On vous écoute !</h3>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <input type="text" name="txtEmail" class="form-control" placeholder="Votre email *" value="" />
+                </div>
+                <div class="form-group">
+                    <input type="submit" name="btnSubmit" class="btnContact" value="Envoyer" />
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <textarea name="txtMsg" class="form-control" placeholder="Votre idée*" style="width: 100%; height: 150px;"></textarea>
+                </div>
+            </div>
+        </div>
+    </form>
+</div>
 
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="./styleJS/formulaire.js" type="text/javascript"></script>
  </body>
  </html>
