--- a/MIAP/Page Aide.html
+++ b/MIAP/Page Aide.html
@@ -37,6 +37,9 @@
 
                     <ul class="nav navbar-nav navbar-right">
                         <!-- <li><a href="#"><span class="glyphicon glyphicon-user"></span></a></li>   A mettre lorsque la personne sera connectée -->
+                        <li>
+                            <button id="btnLangue"><img src=https://cdn.jsdelivr.net/npm/bootstrap-icons/icons/globe2.svg width="32" height="32" alt=""></button>
+                        </li>
                          <li><a class="navlink" href="#" data-toggle="dropdown"><span class="glyphicon glyphicon-log-in"></span> Inscription / Connexion <span class="caret"></span></a>
                              <ul class="dropdown-menu">
                                  <li><a href="#">S'inscrire</a></li>
@@ -54,7 +57,7 @@
 <div class="container questions">
     <!-- une ligne -->
     <div class="row">
-            <h1>Questions fréquentes</h1>
+            <h1>Questions fréquentes FAQ</h1>
     </div>
     <div class="row">
         <p>Votre compte</p>
@@ -136,7 +139,7 @@
             </div>
             <div class="col-md-6">
                 <div class="form-group">
-                    <textarea name="txtMsg" class="form-control" placeholder="Your Message *" style="width: 100%; height: 150px;"></textarea>
+                    <textarea name="txtMsg" class="form-control" placeholder="Votre Message *" style="width: 100%; height: 150px;"></textarea>
                 </div>
             </div>
         </div>
@@ -168,6 +171,6 @@
 
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script src="./styleJS/formulaire.js" type="text/javascript"></script>
+<script src="" type="text/javascript"></script>
  </body>
  </html>
