--- a/MIAP/Equipe.html
+++ b/MIAP/Equipe.html
@@ -33,7 +33,6 @@
                                     <li><a class="navdrop" href="#">About Two</a></li>
                                 </ul></li>
                             <li><a class="navlink" href="#">Aide</a></li>
-                            <li><a class="navlink" href="#">Nous contacter</a></li>
                         </ul>
 
                         <ul class="nav navbar-nav navbar-right">
@@ -60,7 +59,7 @@
                 <div class="col-md"><h1>Hassina AYACHI : PDG</h1></div>
             </div></br>
             <div class="row">
-                <div class="col-md text-center"> <img id="myLogo" class="img-fluid text-center" src="image/aVenir.png" alt="logo" style="width:300px;"></div>
+                <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/aVenir.png" alt="logo" style="width:300px;"></div>
                 <div class="col-md text-center"><p>La meuf si populaire qu'elle est devenue CEO.</p></div>
             </div>
         </div></br>
@@ -71,7 +70,7 @@
             </div></br>
             <div class="row">
                 <div class="col-md text-center"><p>La meuf avec les talons si bruyant qu'on dirait une prof.</p></div>
-                <div class="col-md text-center"> <img id="myLogo" class="img-fluid text-center" src="image/aVenir.png" alt="logo" style="width:300px;"></div>
+                <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/aVenir.png" alt="logo" style="width:300px;"></div>
             </div>
         </div></br>
 
@@ -80,7 +79,7 @@
                 <div class="col-md"><h1>Mehdi AL SID CHEIKH : Développeur web</h1></div>
             </div></br>
             <div class="row">
-                <div class="col-md text-center"> <img id="myLogo" class="img-fluid text-center" src="image/aVenir.png" alt="logo" style="width:300px;"></div>
+                <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/aVenir.png" alt="logo" style="width:300px;"></div>
                 <div class="col-md text-center"><p class="text-center">Le gars qui sait pas écrire son nom.</p></div>
             </div>
         </div></br>
@@ -91,7 +90,7 @@
             </div></br>
             <div class="row">
                 <div class="col-md text-center"><p>Le gars qui n'est pas là même quand il est là.</p></div>
-                <div class="col-md text-center"> <img id="myLogo" class="img-fluid text-center" src="image/aVenir.png" alt="logo" style="width:300px;"></div>
+                <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/aVenir.png" alt="logo" style="width:300px;"></div>
             </div></br>
         </div></br>
 
@@ -100,7 +99,7 @@
                 <div class="col-md"><h1>Hubert TRIONG : Développeur d'applications</h1></div>
             </div></br>
             <div class="row">
-                <div class="col-md text-center"> <img id="myLogo" class="img-fluid text-center" src="image/aVenir.png" alt="logo" style="width:300px;"></div>
+                <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/aVenir.png" alt="logo" style="width:300px;"></div>
                 <div class="col-md text-center"><p>Le gars le plus sérieux mais qui est surtout sur genshin impact.</p></div>
             </div>
         </div></br>
@@ -111,7 +110,7 @@
             </div></br>
             <div class="row">
                 <div class="col-md text-center"><p>Idk yet.</p></div>
-                <div class="col-md text-center"> <img id="myLogo" class="img-fluid text-center" src="image/aVenir.png" alt="logo" style="width:300px;"></div>
+                <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/aVenir.png" alt="logo" style="width:300px;"></div>
             </div>
         </div></br>
 
@@ -120,7 +119,7 @@
                 <div class="col-md"><h1>Janik JIANG : Développeur</h1></div>
             </div></br>
             <div class="row">
-                <div class="col-md text-center"> <img id="myLogo" class="img-fluid text-center" src="image/aVenir.png" alt="logo" style="width:300px;"></div>
+                <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/aVenir.png" alt="logo" style="width:300px;"></div>
                 <div class="col-md text-center"><p>idk yet.</p></div>
             </div>
         </div>
