--- a/MIAP/Presentation.html
+++ b/MIAP/Presentation.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Miap</title>
+        <title>Présentation du projet</title>
        <!-- CSS only -->
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js%22%3E"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -34,7 +34,6 @@
                                     <li><a class="navdrop" href="#">About Two</a></li>
                                 </ul></li>
                             <li><a class="navlink" href="#">Aide</a></li>
-                            <li><a class="navlink" href="#">Nous contacter</a></li>
                         </ul>
 
                         <ul class="nav navbar-nav navbar-right">
