--- a/MIAP/Blog.html
+++ b/MIAP/Blog.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Blog</title>
     <!-- CSS only -->
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js%22%3E"></script>
@@ -11,15 +10,15 @@
     <link rel="stylesheet" type="text/css" href="styleCSS/miap.css" />
 </head>
 <body>
+<header>
+    <img id="myLogo" src="image/LogoPng.png">
+    <img class="res" src="image/twitter.png">
+    <img class="res" src="image/insta.png">
+</header>
 <div class="navbar navbar-default" >
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
-                <div class="navbar-header">
-                    <!-- <img id="myLogo" class="img-fluid" src="image/aVenir.png"> A changer pour le logo-->
-                    <li class="active"><a href="#">LOGO</a></li>
-                </div>
-
                 <div class="navbar-collapse collapse" id="mobile_menu">
                     <ul class="nav navbar-nav">
                         <li><a class="navlink" href="#">Accueil</a></li>
@@ -52,20 +51,97 @@
 </div>
 
 <div class="container">
-    <p id="TitreBlog">Blog</p>
+    <h1 id="TitreBlog">Blog</h1>
 </div>
 
 <div class="container">
-    <img class="" src="" alt="">
-    <p>Date:</p>
-    <p>Début de l'article....</p>
-    <a href="#CollapseCreer" data-toggle="collapse" aria-expanded="false" aria-controls="CollapseCreer">En lire plus</a>
-    <section id="CollapseCreer" class="collapse">
-        <div class="colCompte">
-            <p>Article en entier !</p>
+    <img class="imgBlog" src="image/houmous.jpg" alt="Houmous">
+    <h4>Date: 3 septembre 2020</h4>
+    <h4>Tintamarre on en a pas marre !</h4>
+    <div>
+    <a href="#CollapseTinta" data-toggle="collapse" aria-expanded="false" aria-controls="CollapseTinta">En lire plus</a>
+    <section id="CollapseTinta" class="collapse">
+        <div class="colBlog">
+            <p>Aux manettes de Tintamarre, Gabrielle Beck, une ex architecte, designer, qui n’a rien laissé au hasard lors de sa reconversion en se formant chez Lenôtre. Chez Tintamarre, elle partage son amour pour la cuisine libanaise à travers ses souvenirs d’enfance et son savoir-faire. À l’entrée des pots de légumes en saumure et Gabrielle qui fait son mélange pour le zaatar.
+                <br>
+                Dans nos assiettes ?
+                <br>
+                Hoummous : Purée de pois-chiche à la tahina et au citron.
+                <br>
+                Fatteh de pois chiche : pois-chiche cuits à la coriandre et à l’ail nappé de yaourt à la grecque et pignons de pin.
+                <br>
+                Croquettes de halloumi caramélisées au miel et zaatar, tzatziki et huile pimentée.
+                <br>
+                Frikeh au mijoté de boeuf : blé vert fumé aux parfums d’orient, mijoté de boeuf au miel et épices douces, légumes de saison.
+                <br>
+                Moudardara et son œuf parfait : lentilles au riz parfumé au cumin et relevé au piment, fondue de chou rouge.
+                <br>
+                Mandarine pochée et riz au lait au agrumes.<br>Mouhallabieh au chocolat et éclats de pistaches caramélisés.
+                <br><b>C’est combien ?</b><br>Plats : 14,50€.<br>Menu déjeuner Entrée + plat ou Plat + dessert : 16,50€<br>
+                Sandwich kefta : 7,50€ / Sandwich veggie : 6,50€. (10€ avec une entrée).
+
+                <br>
+                <b>C'est excellent alors foncez !!</b>
+            </p>
         </div>
     </section>
+    </div>
 </div>
-<hr class="separation" style="height: 2px; color: #839D2D; background-color: #839D2D; width: 50%; border: none;">
+
+<hr class="separation">
+
+<div class="container">
+    <img class="imgBlog" src="image/arepas.jpg" alt="Arepas Venezuela">
+    <h4>Date: 18 juillet 2020</h4>
+    <h4>Aji Dulce, La vie douce en approche !</h4>
+    <div>
+        <a href="#CollapseArepa" data-toggle="collapse" aria-expanded="false" aria-controls="CollapseArepa">En lire plus</a>
+        <section id="CollapseArepa" class="collapse">
+            <div class="colBlog">
+                <p>C’est un food truck et un restaurant vénézuélien qui fait la part belle à la spécialité la plus emblématique de la street food vénézuélienne : les arepas. Des galettes de maïs blanc, souvent garnie. Ici, elles sont cuites minute au four, et sont servies chaudes et croustillantes, et garnies à votre convenance, à choisir entre 9 recettes.
+                    <br>
+                    Aji Dulce compte un food truck qui se déplace et dont on peut suivre les emplacements sur leur site et réseaux sociaux, et une petite échoppe avec quelques places assises, dans le 9ème, à Saint-Georges.
+                    <br>
+                    Dans nos assiettes ?<br>Tequenos : beignets au fromage frais vénézuélien
+                    <br>Arepa Pelua : boeuf effiloché mijoté dans une sauce légumes, fromage gouda.
+                    <br>Arepa Catira : poulet rôti effiloché mijoté dans notre sauce légumes, fromage amarillo (gouda)
+                    <br>Arepa Queso : fromage frais vénézuélien, avocat frais, banane plantain frite.
+                    <br>Tostones : chips de banane plantain verte légèrement salés et fromage frais vénézuélien.
+                    <br><b>C’est combien ?</b><br>Arepas : 10,50€
+                    <br>Menu déj 13,50€ : Arepa + 2 sauces + entrée, dessert ou jus maison
+                </p>
+            </div>
+        </section>
+    </div>
+</div>
+
+<hr class="separation">
+
+<div class="container">
+    <img class="imgBlog" src="image/platAsie.jpg" alt="Plat Asiatique">
+    <h4>Date: 1 janvier 2020</h4>
+    <h4>La brigade du tigre, gare aux représailles !</h4>
+    <div>
+        <a href="#CollapseTigre" data-toggle="collapse" aria-expanded="false" aria-controls="CollapseTigre">En lire plus</a>
+        <section id="CollapseTigre" class="collapse">
+            <div class="colBlog">
+                <p>
+                    La Brigade du Tigre, c’est le second restaurant d’Adrien Ferrand, à quelques pas du premier Eels, rue du Faubourg Poissonnière. Le pari ? Un voyage aux quatre coins de l’Asie, de la Thaïlande au Sri-Lanka, des incontournables de la street food aux spécialités traditionnelles, opéré par le chef Galien Emery.
+                    <br>
+                    <b>Dans nos assiettes ?</b><br>3 menus déjeuner entrée-plat-dessert<br>
+                    Rouleau d’automne – miso rouge<br>Crab Cake – mayo piment<br>Raviolis grillés de champignons – Tom Kha pommes de terre
+                    <br>Tataki de boeuf de Galice – black beans<br>Merlu – chou pointu grillé – combawa gingembre
+                    <br>Poitrine de cochon confite et laquée – légumes verts – riz sauté<br>Mango sticky rice
+                    <br>Cake coco caramélisé – caramel cacahuète<br>
+                    <b>C’est combien ?</b><br>Entrée – plat -dessert : 23€ // Entrée – plat ou plat – dessert : 19€
+                    <br>
+                </p>
+            </div>
+        </section>
+    </div>
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="" type="text/javascript"></script>
 </body>
 </html>
