--- a/Principal/index.html
+++ b/Principal/index.html
@@ -48,12 +48,12 @@
                               <li> <a href="./equipe.html">L'équipe</a> </li>
                               <li> <a href="./aide.html">Contactez-nous</a> </li>
                               <li>
-                                 <form name="x" action="index.php?controle=connexion&action=connexion" method="post">
+                                 <form name="x" action="./index.php?controle=connexion&action=connexion" method="post">
                                      <button type="submit" class="btn-link nav-link">Se Connecter</button>
                                  </form>                    
                               </li>
                               <li>
-                                 <form name="x" action="index.php?controle=inscription&action=affins" method="post">
+                                 <form name="x" action="./index.php?controle=inscription&action=affins" method="post">
                                     <button type="submit" class="btn-link nav-link">Inscription</button>
                                  </form> 
                               </li>  
