--- a/Principal/blog.html
+++ b/Principal/blog.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- Responsive-->
     <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="css/style2.css">
     <!-- fevicon -->
     <link rel="icon" href="images/fevicon.png" type="image/gif" />
     <!-- Scrollbar Custom CSS -->
@@ -25,7 +24,7 @@
               <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
                  <div class="full">
                     <div class="center-desk">
-                       <div class="logo"> <a href="index.html">Miap</a> </div>
+                       <div class="logo"> <a href="index.html"><img src="./image/LogoPng.png" alt="Logo" class="img-fluid" id="logo"></a></div>
                     </div>
                  </div>
               </div>
@@ -46,7 +45,8 @@
                                 <form name="x" action="index.php?controle=inscription&action=affins" method="post">
                                    <button type="submit" class="btn-link nav-link">Inscription</button>
                                 </form> 
-                             </li> 
+                             </li>
+                             <li></li> 
                           </ul>
                        </nav>
                     </div>
@@ -65,6 +65,7 @@
                         <h2> Blog </h2>
                         <span>Suivez nos aventures culinaires avec notre blog !</span>
                     </div>
+                    <hr>
                 </div>
             </div>
             <div class="row pb-5">
@@ -158,10 +159,10 @@
         <div class="footer pb-5">
            <div class="container">
               <div class="row">
-                 <div class="col-lg-2 col-md-6 col-sm-12 width">
+                 <div class="col-lg-3 col-md-6 col-sm-12 width">
                     <div class="address">
-                       <h3>Address</h3>
-                       <i><img src="icon/3.png">Locations</i>
+                       <h3>Adresse</h3>
+                       <i><img src="icon/3.png">149 Avenue de Versailles, 75016 Paris</i>                        
                     </div>
                  </div>
                  <div class="col-lg-2 col-md-6 col-sm-12 width">
@@ -172,13 +173,13 @@
                  </div>
                  <div class="col-lg-2 col-md-6 col-sm-12 width">
                     <div class="address">
-                       <h3>Useful Linkes</h3>
+                       <h3>Liens Utiles</h3>
                        <i><img src="icon/1.png">Locations</i>
                     </div>
                  </div>
                  <div class="col-lg-2 col-md-6 col-sm-12 width">
                     <div class="address">
-                       <h3>Social Media </h3>
+                       <h3>Réseaux Sociaux </h3>
                        <ul class="contant_icon">
                           <li><img src="icon/fb.png" alt="icon"/></li>
                           <li><img src="icon/tw.png" alt="icon"/></li>
@@ -190,14 +191,14 @@
                  <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 width">
                     <div class="address">
                        <h3>Newsletter </h3>
-                       <input class="form-control" placeholder="Enter your email" type="type" name="Enter your email">
-                       <button class="submit-btn">Subscribe</button>
+                       <input class="form-control" placeholder="Entrez votre mail" type="type" name="Enter your email">
+                       <button class="submit-btn">S'inscrire</button>
                     </div>
                  </div>
               </div>
            </div>
         </div>
-    </footr>
+   </footr>
     <!-- Javascript files--> 
     <script src="js/jquery.min.js"></script> 
     <script src="js/popper.min.js"></script> 
