--- a/Principal/equipe.html
+++ b/Principal/equipe.html
@@ -16,45 +16,48 @@
     <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
 </head>
 <body class="main-layout">
-    <header>
-        <!-- header inner -->
-        <div class="header">
-        <div class="container">
-           <div class="row">
-              <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
-                 <div class="full">
-                    <div class="center-desk">
-                       <div class="logo"> <a href="index.html">Miap</a> </div>
-                    </div>
-                 </div>
-              </div>
-              <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
-                 <div class="menu-area">
-                    <div class="limit-box">
-                       <nav class="main-menu">
-                          <ul class="menu-area-main">
-                             <li> <a href="./blog.html"> Blog</a> </li>
-                             <li class="active"> <a href="./equipe.html">L'équipe</a> </li>
-                             <li> <a href="./aide.html">Contactez-nous</a> </li>
-                             <li>
-                                 <form name="x" action="index.php?controle=connexion&action=connexion" method="post">
+   <header>
+      <!-- header inner -->
+      <div class="header">
+         <div class="container">
+            <div class="row">
+               <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
+                  <div class="full">
+                     <div class="center-desk">
+                        <div class="logo"> <a href="index.html"><img src="./image/LogoPng.png" alt="Logo" class="img-fluid" id=logo></a></div>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
+                  <div class="menu-area">
+                     <div class="limit-box">
+                        <nav class="main-menu">
+                           <ul class="menu-area-main">
+                              <li> <a href="./blog.html"> Blog</a> </li>
+                              <li> <a href="./equipe.html">L'équipe</a> </li>
+                              <li> <a href="./aide.html">Contactez-nous</a> </li>
+                              <li>
+                                 <form name="x" action="./index.php?controle=connexion&action=connexion" method="post">
                                     <button type="submit" class="btn-link nav-link">Se Connecter</button>
                                  </form>                    
                               </li>
                               <li>
-                                 <form name="x" action="index.php?controle=inscription&action=affins" method="post">
+                                 <form name="x" action="./index.php?controle=inscription&action=affins" method="post">
                                     <button type="submit" class="btn-link nav-link">Inscription</button>
                                  </form> 
-                              </li> 
-                          </ul>
-                       </nav>
-                    </div>
-                 </div>
-              </div>
-           </div>
-        </div>
-        <!-- end header inner --> 
-    </header>
+                              </li>                               
+                              <li>                                 
+                              </li>
+                           </ul>
+                        </nav>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+      <!-- end header inner --> 
+   </header>
 
     <div class="contenu">
         <div class="container">
@@ -125,49 +128,49 @@
     </div>
 
     <footr>
-         <div class="footer pb-5">
-            <div class="container">
-               <div class="row">
-                  <div class="col-lg-2 col-md-6 col-sm-12 width">
-                     <div class="address">
-                        <h3>Address</h3>
-                        <i><img src="icon/3.png">Locations</i>
-                     </div>
+      <div class="footer pb-5">
+         <div class="container">
+            <div class="row">
+               <div class="col-lg-3 col-md-6 col-sm-12 width">
+                  <div class="address">
+                     <h3>Adresse</h3>
+                     <i><img src="icon/3.png">149 Avenue de Versailles, 75016 Paris</i>                        
                   </div>
-                  <div class="col-lg-2 col-md-6 col-sm-12 width">
-                     <div class="address">
-                        <h3>Menus</h3>
-                        <i><img src="icon/2.png">Locations</i>
-                     </div>
+               </div>
+               <div class="col-lg-2 col-md-6 col-sm-12 width">
+                  <div class="address">
+                     <h3>Menus</h3>
+                     <i><img src="icon/2.png">Locations</i>
                   </div>
-                  <div class="col-lg-2 col-md-6 col-sm-12 width">
-                     <div class="address">
-                        <h3>Useful Linkes</h3>
-                        <i><img src="icon/1.png">Locations</i>
-                     </div>
+               </div>
+               <div class="col-lg-2 col-md-6 col-sm-12 width">
+                  <div class="address">
+                     <h3>Liens Utiles</h3>
+                     <i><img src="icon/1.png">Locations</i>
                   </div>
-                  <div class="col-lg-2 col-md-6 col-sm-12 width">
-                     <div class="address">
-                        <h3>Social Media </h3>
-                        <ul class="contant_icon">
-                           <li><img src="icon/fb.png" alt="icon"/></li>
-                           <li><img src="icon/tw.png" alt="icon"/></li>
-                           <li><img src="icon/lin (2).png" alt="icon"/></li>
-                           <li><img src="icon/instagram.png" alt="icon"/></li>
-                        </ul>
-                     </div>
+               </div>
+               <div class="col-lg-2 col-md-6 col-sm-12 width">
+                  <div class="address">
+                     <h3>Réseaux Sociaux </h3>
+                     <ul class="contant_icon">
+                        <li><img src="icon/fb.png" alt="icon"/></li>
+                        <li><img src="icon/tw.png" alt="icon"/></li>
+                        <li><img src="icon/lin (2).png" alt="icon"/></li>
+                        <li><img src="icon/instagram.png" alt="icon"/></li>
+                     </ul>
                   </div>
-                  <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 width">
-                     <div class="address">
-                        <h3>Newsletter </h3>
-                        <input class="form-control" placeholder="Enter your email" type="type" name="Enter your email">
-                        <button class="submit-btn">Subscribe</button>
-                     </div>
+               </div>
+               <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 width">
+                  <div class="address">
+                     <h3>Newsletter </h3>
+                     <input class="form-control" placeholder="Entrez votre mail" type="type" name="Enter your email">
+                     <button class="submit-btn">S'inscrire</button>
                   </div>
                </div>
             </div>
          </div>
-    </footr>
+      </div>
+   </footr>
     <!-- Javascript files--> 
     <script src="js/jquery.min.js"></script> 
     <script src="js/popper.min.js"></script> 
