--- a/Principal/blog.html
+++ b/Principal/blog.html
@@ -68,6 +68,7 @@
                     <hr>
                 </div>
             </div>
+
             <div class="row pb-5">
                 <img class="imgBlog img-fluid" src="image/houmous.jpg" alt="Houmous">
                 <h4>Date: 3 septembre 2020</h4>
@@ -102,10 +103,12 @@
                 </div>
             </div>
 
+            <hr class="separation">
+
             <div class="row pb-5">
                 <img class="imgBlog" src="image/arepas.jpg" alt="Arepas Venezuela">
-                <h4>Date: 18 juillet 2020</h4>
-                <h4>Aji Dulce, La vie douce en approche !</h4>
+                <h4>Date: 18 juillet 2020 </h4>
+                <h4>Aji Dulce, La vie douce en approche ! </h4>
                 <div>
                     <a href="#CollapseArepa" data-toggle="collapse" aria-expanded="false" aria-controls="CollapseArepa">En lire plus</a>
                     <section id="CollapseArepa" class="collapse">
@@ -126,6 +129,8 @@
                     </section>
                 </div>
             </div>
+
+            <hr class="separation">
 
             <div class="row pb-5">
                 <img class="imgBlog" src="image/platAsie.jpg" alt="Plat Asiatique">
